--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.12"
 dependencies = [
     "ipykernel>=6.29.5",
     "librosa>=0.11.0",
+    "matplotlib>=3.10.3",
     "pip>=25.1.1",
     "torch>=2.7.0",
     "torchaudio>=2.7.0",
