--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,5 +11,6 @@ dependencies = [
     "pip>=25.1.1",
     "torch>=2.7.0",
     "torchaudio>=2.7.0",
+    "torchtune>=0.6.1",
     "torchvision>=0.22.0",
 ]
